# rustnet

./: .gitignore  Cargo.toml  LICENSE  README.md  status_to_headers.rs  test.txt  testers  testers.rs  tmp.txt
.github/workflows/: rust.yml
.ideas/: server.rs
client/: Cargo.toml  tui_browser.rs
client/parsing/: parse.rs
client/src/: main.rs  tui.rs
client/test_data/: delete_status_200.txt  get_deny.txt  get_html.txt  get_image_jpeg.txt  get_image_svg.txt  get_json.txt  get_png.txt  get_status_418.txt  get_text.txt  get_utf8.txt  get_webp.txt  get_xml.txt  patch_status_201.txt  post_status_201.txt  put_status_203.txt
client/tests/: httpbin.rs  parse.rs
examples/: browser.rs  client.rs  server.rs  tester.rs  tests.rs
examples/client_tests/: get_text.txt  get_xml.txt
examples/server_tests/: get_about.txt  get_foo.txt  get_index.txt  head_foo.txt
examples/static/: about.html  index.html
ideas/: test_client.rs  test_server.rs
librustnet/: Cargo.toml
librustnet/src/: body.rs  client.rs  connection.rs  errors.rs  header.rs  http.rs  lib.rs  request.rs  response.rs  router.rs  server.rs  tests.rs  threadpool.rs  util.rs
notes/: utils.rs
rustnet_browser/: Cargo.toml
rustnet_browser/src/: main.rs
rustnet_client/: Cargo.toml
rustnet_client/src/: main.rs
rustnet_client/test_data/: delete_status_200.txt  get_deny.txt  get_status_202.txt  get_status_418.txt  get_webp.txt
rustnet_client/tests/: client.rs
rustnet_server/: Cargo.toml
rustnet_server/src/: main.rs
rustnet_server/test_data/: get_about.txt  get_foo.txt  get_index.txt  head_favicon.txt  put_about.txt
scripts/: client_cli.sh  get_about_headers.txt  get_favicon_headers.txt  get_index_headers.txt  get_non_existent_page_headers.txt  run_server_tests.ps1  run_server_tests.sh  run_tests.ps1  run_tests.sh  server_cli.sh
scripts/client_tests/: get_deny.txt  get_html.txt  get_jpeg.txt  get_json.txt  get_png.txt  get_svg.txt  get_text.txt  get_utf8.txt  get_webp.txt  get_xml.txt  run_tests.sh
scripts/server_tests/: get_about.txt  head_about.txt  head_favicon.txt  head_foo.txt  head_index.txt  run_tests.ps1  run_tests.sh
scripts/tests/: get_about.txt  get_about_win.txt  get_favicon.txt  get_foo.txt  get_foo_linux.txt  get_foo_win.txt  get_index_linux.txt  get_index_win.txt
server/: Cargo.toml
server/src/: main.rs
server/test_data/: delete_about.txt  get_about.txt  get_foo.txt  get_index.txt  head_about.txt  head_favicon.txt  head_foo.txt  head_index.txt  post_about.txt
server/tests/: route.rs  routes.rs
server/tests/common/: mod.rs
server_tests/: expected_output.txt  run_server_tests.ps1  run_server_tests.sh  test_output.txt
src/: body.rs  cli.rs  client.rs  connection.rs  error.rs  errors.rs  header.rs  headers.rs  http.rs  io.rs  lib.rs  old_connection.rs  pool.rs  request.rs  response.rs  router.rs  server.rs  style.rs  tests.rs  thread_pool.rs  threadpool.rs  tui.rs  util.rs  utils.rs  worker.rs  workers.rs
src/client/: cli.rs  output.rs  tui.rs
src/header/: names.rs  values.rs
static/: error.html
tester/: Cargo.toml
tester/src/: main.rs  status_to_headers.rs
tests/: client.rs  server.rs
(+10 files in other folders)
