[workspace]
members = [
    "librustnet",
    "client",
    "server",
    "tester"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["ryanv404"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ryanv404/rustnet.git"
keywords = ["http", "server", "client", "networking"]
categories = ["network-programming"]
