[package]
name = "rustnet"
version = "0.1.0"
authors = ["ryanv404"]
edition = "2021"
description = "An HTTP networking library."

license = "MIT"
readme = "README.md"
repository = "https://github.com/ryanv404/rustnet.git"
keywords = ["http", "server", "client", "networking"]
categories = ["network-programming"]
autobins = false

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
