[package]
name = "rustnet"
version = "0.1.1"
authors = ["ryanv404"]
edition = "2021"
description = "An HTTP networking library for creating servers and clients."
license = "MIT"
readme = "./README.md"
repository = "https://github.com/ryanv404/rustnet.git"
keywords = ["http", "server", "client", "tui", "networking"]
categories = ["network-programming"]
