[package]
name = "tester"
description = "Test runner for rustnet."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
librustnet = { path = "../librustnet" }
